Update usermanual.pdf for the Help menu entry.

--- a/doc/usermanual.tex
+++ b/doc/usermanual.tex
@@ -76,11 +76,13 @@ Mit der Escape-Taste \Esc kehren sie von Untermenüs (\ui{Spiel fortsetzen} und 
 
 \paragraph{} Der 2. Eintrag \ui{Spiel fortsetzen} erlaubt Ihnen, ein bereits freigeschaltetes Level direkt zu starten, ohne alle davor noch einmal spielen zu müssen. Ein noch nicht freigeschaltetes Level erkennen Sie daran, dass es in eckigen Klammern steht. Wenn sie ein solches auswählen, passiert nichts. Das erste Level ist immer freigeschaltet (es kann auch durch Auswahl von \ui{Neues Spiel} im Hauptmenü erreicht werden). Jedes weitere Level wird freigeschaltet, sobald sie es durch Durchspielen des vorherigen Levels erreichen.
 
-\paragraph{} Der 3. Eintrag \ui{Credits} zeigt Informationen zu FloodFill an. Mit einer beliebigen Taste kehren Sie zum Hauptmenü zurück.
+\paragraph{} Der 3. Eintrag \ui{Hilfe} zeigt eine Zusammenfassung der Hilfe an. Mit einer beliebigen Taste kehren Sie zum Hauptmenü zurück.
 
-\paragraph{} Der 4. Eintrag \ui{Einstellungen} öffnet ein Untermenü in dem Sie zwischen verschiedenen Bildauflösungen wählen können, sowie zwischen Vollbild- und Fenstermodus wechseln und vertikale Syncronisation (VSync) ein- oder ausschalten können. Die Optionen werden gespeichert und auch beim nächsten Spielstart angewandt.
+\paragraph{} Der 4. Eintrag \ui{Credits} zeigt Informationen zu FloodFill an. Mit einer beliebigen Taste kehren Sie zum Hauptmenü zurück.
 
-\paragraph{} Der 5. Eintrag \ui{Beenden} beendet das Spiel.
+\paragraph{} Der 5. Eintrag \ui{Einstellungen} öffnet ein Untermenü in dem Sie zwischen verschiedenen Bildauflösungen wählen können, sowie zwischen Vollbild- und Fenstermodus wechseln und vertikale Syncronisation (VSync) ein- oder ausschalten können. Die Optionen werden gespeichert und auch beim nächsten Spielstart angewandt.
+
+\paragraph{} Der 6. Eintrag \ui{Beenden} beendet das Spiel.
 
 
 \section{Spiel}
